2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Remove the keyboard 
	  grabbing feature. It causes too much problems. People without
	  a mousewheel will have to click the plugin and use the real
	  mixer for now.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-track-combo.c: Increment the counter
	  for determining the active track index only when playback
	  and capture tracks are found.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.{c,h}: Add "mute-toggled" 
	  signal for when the middle mouse button is clicked. Add 
	  xfce_volume_button_set_muted() method for manually changing
	  the mute state of the button (does not affect the actual sound
	  settings).
	* panel-plugin/xfce-mixer-plugin.c: Handle 
	  GST_MESSAGE_MUTE_TOGGLED messages by setting the muted state
	  of the plugin button.
	  
2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Add support for
	  xfce_mixer_card_connect() so that the volume button is updated
	  whenever the volume of the current mixer track is changed by
	  another program.
	* panel-plugin/xfce-mixer.c: Parse GST_MESSAGE_VOLUME_CHANGED
	  messages, but don't handle them yet. In the mixer it's much more
	  complicated than in the plugin, gonna do that later.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* icons/: Add volume level icons (1x muted, 5x different sound
	  wave icons). I'm not exactly satisfied, but it's better than
	  before.
	* libxfce4mixer/xfce-mixer-stock.{c,h}: Add support for the
	  icons mentioned above.
	* panel-plugin/xfce-mixer-plugin.c, 
	  panel-plugin/xfce-volume-button.c,
	  panel-plugin/xfce-plugin-dialog.c: (Hopefully) improve icon
	  scaling. Make sure (I guess) not to crash when the properties
	  dialog returns crap (why would it? heck, what do I know?).

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-track-combo.c: Fix a wrong 